fixed bug in shifting tiles down

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .tile {
-  background-color: rgb(227, 167, 90);
+  background-color: #ddeaf9;
   height: 6rem;
   width: 6rem;
   line-height: 6rem;
